[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/themes/Pink_Theme.tres" type="Theme" id=1]
[ext_resource path="res://!TESTS/WritingSpace.gd" type="Script" id=2]
[ext_resource path="res://!TESTS/Tree.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/png/collapse.png" type="Texture" id=4]
[ext_resource path="res://Assets/png/plus.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_top = 17.0
content_margin_bottom = 17.0
bg_color = Color( 1, 0.823529, 0.968627, 1 )
border_width_left = 2
border_width_top = 7
border_width_right = 11
border_width_bottom = 7
border_color = Color( 1, 0.823529, 0.968627, 1 )
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_detail = 25
expand_margin_left = 6.0

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 17.0
content_margin_bottom = 17.0
bg_color = Color( 1, 0.823529, 0.968627, 1 )
border_width_left = 2
border_width_top = 7
border_width_right = 11
border_width_bottom = 7
border_color = Color( 1, 0.823529, 0.968627, 1 )
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_detail = 25
expand_margin_left = 6.0

[sub_resource type="Animation" id=3]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenShade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 0.254902 ) ]
}

[node name="WritingSpace" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Space" type="HSplitContainer" parent="."]
margin_right = 1216.0
margin_bottom = 816.0
mouse_filter = 1
size_flags_vertical = 3
split_offset = -300

[node name="TreeView" type="HBoxContainer" parent="Space"]
margin_right = 302.0
margin_bottom = 816.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" parent="Space/TreeView" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 276.0
margin_bottom = 816.0

[node name="Collapse" type="Button" parent="Space/TreeView"]
margin_left = 280.0
margin_right = 302.0
margin_bottom = 57.0
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_vertical = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
custom_constants/hseparation = 0
toggle_mode = true
shortcut_in_tooltip = false
enabled_focus_mode = 0
icon = ExtResource( 4 )

[node name="TabMargin" type="MarginContainer" parent="Space"]
margin_left = 314.0
margin_right = 1216.0
margin_bottom = 816.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_bottom = 15

[node name="TabContainer" type="TabContainer" parent="Space/TabMargin"]
margin_right = 887.0
margin_bottom = 801.0
size_flags_horizontal = 3
drag_to_rearrange_enabled = true

[node name="ScreenShade" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )

[node name="Add_Item" type="MenuButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -50.0
margin_right = 50.0
shortcut_in_tooltip = false
icon = ExtResource( 5 )
items = [ "Simple", null, 0, false, false, 0, 0, null, "", false, "Checkbox", null, 0, false, false, 1, 0, null, "", false, "Icon", null, 0, false, false, 2, 0, null, "", false ]
switch_on_hover = true

[node name="TextInput" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -46.0
margin_right = 218.0
margin_bottom = 46.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Namebox" type="LineEdit" parent="TextInput"]
margin_right = 436.0
margin_bottom = 47.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_length = 50
placeholder_text = "Tab Name"
caret_blink = true

[node name="Buttons" type="HBoxContainer" parent="TextInput"]
margin_top = 51.0
margin_right = 436.0
margin_bottom = 92.0
alignment = 1

[node name="Confirm" type="Button" parent="TextInput/Buttons"]
margin_right = 362.0
margin_bottom = 41.0
size_flags_horizontal = 3
text = "OK"

[node name="Cancel" type="Button" parent="TextInput/Buttons"]
margin_left = 366.0
margin_right = 436.0
margin_bottom = 41.0
text = "cancel"

[node name="Tween" type="Tween" parent="."]

[node name="Anim" type="AnimationPlayer" parent="."]
anims/ScreenShade = SubResource( 3 )
[connection signal="dragged" from="Space" to="." method="_on_Space_dragged"]
[connection signal="cell_selected" from="Space/TreeView/Tree" to="." method="_on_Tree_cell_selected"]
[connection signal="treeitem_dropped" from="Space/TreeView/Tree" to="." method="_on_Tree_treeitem_dropped"]
[connection signal="toggled" from="Space/TreeView/Collapse" to="." method="_on_Collapse_toggled"]
[connection signal="tab_changed" from="Space/TabMargin/TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="pressed" from="TextInput/Buttons/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="TextInput/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
